added css changes to a p and a elements.

--- a/bio.html
+++ b/bio.html
@@ -35,7 +35,8 @@
       </div>
       <div class="main">
         <h1 id="top">My Profile Page</h1>
-        <h2 id="school-id">AltSchool ID: ALT/SOE/024/0446</h2>
+       
+        <h2 id="school-id">ID: ALT/SOE/024/0446</h2>
         <h2 id="about">ABOUT ME</h2>
         <p>Hello, I am Olutayo Tolulope Esther.</p>
         <p>
@@ -83,6 +84,7 @@
         </p>
         <br /><br />
         <p><a href="#top">Back to top &rarr;</a></p>
+        <p><a href="index.html">Assignment Home Page &rarr;</a></p>
       </div>
     </div>
   </body>
